# video-transcription-analysis

./: .env.example  .gitignore  IMPLEMENTATION_STATUS.md  README.md  SPEAKER_ATTRIBUTION_IMPROVEMENTS.md  TEST_RESULTS.md  justfile  pyproject.toml  setup_diarization.md  test_ocr_debug.py
.serena/: project.yml
examples/: analyze_only.py  enroll_speaker.py  learn_corrections.py  manage_corrections.py  manage_vocabulary.py  process_video.py  transcribe_only.py
src/video_transcription/: __init__.py  analyzer.py  corrector.py  learning.py  llm_corrector.py  name_detector.py  processor.py  speaker_db.py  transcriber.py  vocabulary.py
tests/: test_improvements.py
